feature: eddits remarks

--- a/src/components/account-profile.html
+++ b/src/components/account-profile.html
@@ -20,7 +20,7 @@
         <div class="profile__balance uk-flex uk-flex-between uk-flex-middle">
           <div class="uk-flex uk-flex-column">
             <label class="profile__subtitle">Баланс</label>
-            <span>5065 балов</span>
+            <span>5065 баллов</span>
           </div>
           <button type="button" data-uk-toggle="target: #popupPay">Вывести в &#8381; на карту</button>
         </div>
