--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -593,14 +593,44 @@
       <use xlink:href="img/symbol/sprite.svg#close" />
     </svg>
     <div class="popup__header">
-      <h2 class="title title--small uk-text-center">Войдите или зарегистрируйтесь</h2>
+      <h2 class="title title--small uk-text-center">Войдите в личный кабинет</h2>
     </div>
     <div class="popup__content">
       <div class="field field--account uk-margin-bottom">
         <label for="" class="field__title popup__subtitle">Контактный телефон</label>
         <input type="text">
       </div>
-      <button class="btn" type="button">Войти или зарегистрироваться</button>
+      <button class="btn" type="button">Войти</button>
+      <span>Введите номер телефона!</span>
+    </div>
+    <div class="popup__footer">
+      <div class="uk-margin-small-bottom">
+        <input class="uk-hidden" type="checkbox" id="f7" name="f7" checked="">
+        <label for="f7">Согласен с условиями <a href="#">Публичной оферты</a></label>
+      </div>
+      <div>
+        <input class="uk-hidden" type="checkbox" id="f8" name="f8">
+        <label for="f8">Получать эксклюзивные скидки в SMS‑рассылке</label>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Registration -->
+<div id="popupRegistration" class="popup popup--login uk-flex-top" data-uk-modal>
+  <div class="popup__dialog popup__dialog--medium uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+    <svg class="popup__close uk-modal-close-default" width="30" height="30">
+      <use xlink:href="img/symbol/sprite.svg#close" />
+    </svg>
+    <div class="popup__header">
+      <h2 class="title title--small uk-text-center">Пройдите регистрацию</h2>
+    </div>
+    <div class="popup__content">
+      <div class="field field--account uk-margin-bottom">
+        <label for="" class="field__title popup__subtitle">Контактный телефон</label>
+        <input type="text">
+      </div>
+      <button class="btn" type="button">Зарегистрироваться</button>
       <span>Введите номер телефона!</span>
     </div>
     <div class="popup__footer">
