--- a/src/components/header.html
+++ b/src/components/header.html
@@ -13,10 +13,10 @@
           <a href="#"></a>
         </li>
         <li>
-          <a href="#">Вход</a>
+          <a href="#" data-uk-toggle="target: #popupLogin">Вход</a>
         </li>
         <li>
-          <a href="#">Регистрация</a>
+          <a href="#" data-uk-toggle="target: #popupRegistration">Регистрация</a>
         </li>
       </ul>
     </div>
@@ -45,24 +45,11 @@
                 </div>
 
                 <ul class="menu__tabs uk-flex uk-child-width-1-2" uk-switcher="swiping: false">
-                  <li><a href="#">Меню</a></li>
                   <li><a href="#">Категории товаров</a></li>
+                  <li><a href="#">Меню</a></li>
                 </ul>
 
                 <ul class="uk-switcher uk-overflow-container">
-                  <li>
-                    <ul class="menu__list uk-flex uk-flex-wrap uk-child-width-1-2">
-                      <li><a href="#">Главная</a></li>
-                      <li><a href="#">Каталог</a></li>
-                      <li><a href="#">Гарантия</a></li>
-                      <li><a href="#">Доставка и оплата</a></li>
-                      <li><a href="#">Кредит</a></li>
-                      <li><a href="#">Новости</a></li>
-                      <li><a href="#">Отзывы</a></li>
-                      <li><a href="#">Контакты</a></li>
-                    </ul>
-                  </li>
-
                   <li>
                     <ul class="menu__categories" uk-accordion>
                       <li class="uk-open">
@@ -669,6 +656,19 @@
                           </ul>
                         </div>
                       </li>
+                    </ul>
+                  </li>
+
+                  <li>
+                    <ul class="menu__list uk-flex uk-flex-wrap uk-child-width-1-2">
+                      <li><a href="#">Главная</a></li>
+                      <li><a href="#">Каталог</a></li>
+                      <li><a href="#">Гарантия</a></li>
+                      <li><a href="#">Доставка и оплата</a></li>
+                      <li><a href="#">Кредит</a></li>
+                      <li><a href="#">Новости</a></li>
+                      <li><a href="#">Отзывы</a></li>
+                      <li><a href="#">Контакты</a></li>
                     </ul>
                   </li>
                 </ul>
