--- a/src/sass/components/_field.scss
+++ b/src/sass/components/_field.scss
@@ -48,6 +48,11 @@
       border-radius: 8px;
       resize: none;
     }
+
+    .field__title {
+      font: 500 14px/19px FuturaPT;
+      color: rgba(48, 55, 61, 0.6);
+    }
   }
 
   &--checkout {
