--- a/src/sass/layout/_accordion.scss
+++ b/src/sass/layout/_accordion.scss
@@ -27,12 +27,18 @@
     }
   }
 
-  li:not(:last-of-type) {
-    .uk-accordion-title {
-      border-bottom: 1px solid #E9E9E9;
+  li {
+    &:not(:last-of-type) {
+      .uk-accordion-title {
+        border-bottom: 1px solid #E9E9E9;
+      }
+
+      .uk-accordion-content {
+        border-bottom: 1px solid #E9E9E9;
+      }
     }
 
-    .uk-accordion-content {
+    &:last-of-type.uk-open .uk-accordion-title {
       border-bottom: 1px solid #E9E9E9;
     }
   }
