--- a/src/sass/layout/_catalog.scss
+++ b/src/sass/layout/_catalog.scss
@@ -6,7 +6,7 @@
     }
 
     @include screen(l) {
-      padding-top: 20px;
+      padding-top: 10px;
     }
 
     &-top {
@@ -17,7 +17,7 @@
       }
 
       @include screen(l) {
-        padding: 15px 30px 25px;
+        padding: 15px 30px 10px;
         background-image: url("../img/pic/bg/catalog-header.jpg");
         background-repeat: no-repeat;
         background-position: right;
@@ -60,7 +60,7 @@
     font: 600 16px/22px FuturaPT;
     color: #FF548C;
     background-color: #ffffff;
-    border: 1px solid #ECECEC;
+    border: 1px solid rgba(236, 236, 236, .7);
     border-radius: 8px;
     transition: border .3s, background-color .3s, box-shadow .3s, color .15s;
     overflow: hidden;
@@ -75,6 +75,8 @@
 
   &__features {
     .feature {
+      padding-left: 15px;
+
       div:first-of-type {
         width: 80px;
         height: 80px;
@@ -84,10 +86,12 @@
         p {
           &:first-of-type {
             font: 500 22px/26px FuturaPT;
+            color: #30373D;
           }
 
           &:last-of-type {
-            font: normal 14px/21px Roboto;
+            font: normal 14px/26px Roboto, sans-serif;
+            color: rgba(48, 55, 61, .9);
           }
         }
       }
@@ -137,8 +141,8 @@
         display: block;
         padding: 10px;
         width: max-content;
-        font: 500 16px/20px Roboto;
-        color: #30373D;
+        font: 500 14px/20px Roboto;
+        color: rgba(48, 55, 61, 0.8);
         background: #FFFFFF;
         box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
         border-radius: 10px;
