--- a/src/sass/layout/_checkout.scss
+++ b/src/sass/layout/_checkout.scss
@@ -276,12 +276,13 @@
       }
 
       @include screen(l) {
-        margin: 0 auto 20px;
+        margin: 0 auto 0px;
       }
     }
 
     span {
-      font: 500 16px/16px Roboto;
+      font: 400 14px/16px Roboto;
+      color: rgba(43, 45, 48, 0.8);
 
       @include screen(xl) {
         text-align: center;
@@ -299,7 +300,7 @@
       }
 
       @include screen(l) {
-        padding: 20px 10px 20px;
+        padding: 10px 10px 5px;
       }
 
       &:not(:last-of-type) {
@@ -328,7 +329,7 @@
         border-radius: 10px;
         transform: scale(1.05, 1.1);
 
-        &::after {
+        /* &::after {
           display: block;
           content: "";
           position: absolute;
@@ -337,10 +338,10 @@
           right: 0;
           margin: auto;
           width: 85%;
-          height: 6px;
+          height: 4px;
           background-color: #FF548C;
           border-radius: 100px 100px 0px 0px;
-        }
+        } */
 
         span {
           color: #FF548C;
@@ -355,17 +356,13 @@
 
       li {
         @include screen(l) {
-          padding: 20px 5px 10px;
+          padding: 10px 10px 5px;
         }
       }
 
-      span:not(.checkout__subtitle) {
-        font: 500 14px/18px Roboto;
-        color: #333333;
-
-        span {
-          opacity: .5;
-        }
+      span {
+        font: 400 14px/16px Roboto;
+        color: rgba(43, 45, 48, 0.8);
       }
     }
   }
