--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -34,9 +34,16 @@
       }
 
       @include screen(l) {
-        margin-bottom: 98px;
-        margin-top: 15px;
+        margin-bottom: 85px;
+        margin-top: 30px;
         max-width: 270px;
+        background: transparent;
+        color: rgba(48, 55, 61, 0.8);
+        box-shadow: 0px 2px 15px rgba(0, 0, 0, .1);
+
+        &:hover {
+          box-shadow: 0px 2px 15px rgba(0, 0, 0, .3)
+        }
       }
     }
 
@@ -221,7 +228,7 @@
 
       &-btn {
         padding: 15px 13px;
-        font: 600 18px/21px FuturaPT;
+        font: 500 18px/21px FuturaPT;
         text-transform: uppercase;
         background: #27CC00;
         box-shadow: 0px 3px 10px rgba(39, 204, 0, 0.35);
@@ -240,7 +247,7 @@
 
       &-btn--pink {
         padding: 19px 15px;
-        font: 600 18px/21px FuturaPT;
+        font: 500 18px/21px FuturaPT;
         text-transform: uppercase;
 
         span {
@@ -311,7 +318,8 @@
         width: 175px !important;
       }
 
-      img {
+      img,
+      svg {
         margin-right: 10px;
         width: 28px;
         height: 28px;
@@ -373,7 +381,6 @@
       min-height: 110px;
       width: 110px;
       height: 110px;
-      border: 2px solid transparent;
       border-radius: 50%;
 
       div {
@@ -518,6 +525,10 @@
         &:not(.swiper-slide-active) {
           opacity: 0 !important;
         }
+
+        a {
+          width: 100%;
+        }
       }
     }
 
@@ -588,11 +599,13 @@
     padding: 8px 15px 10px;
     width: 100%;
     text-align: center;
-    border: 1px solid #FF548C;
+    border: 1px solid rgba(43, 45, 48, 0.4);
     border-radius: 8px;
     font: 600 16px/22px FuturaPT;
     background: #FFFFFF;
-    color: #FF548C;
+    color: rgba(43, 45, 48, 0.8);
+    cursor: pointer;
+    white-space: no-wrap;
 
     @include screen(l) {
       align-self: flex-start;
@@ -635,7 +648,7 @@
         padding-left: 40px;
         margin-bottom: 35px;
         pointer-events: none;
-        font: 600 32px/42px FuturaPT;
+        font: 600 28px/42px FuturaPT;
       }
 
       &::before {
@@ -711,7 +724,7 @@
         }
 
         @include screen(l) {
-          padding: 7px 20px 6px 25px;
+          padding: 10px 20px 11px 25px;
           font: 600 14px/28px FuturaPT;
         }
 
@@ -866,12 +879,20 @@
       .delivery__lower-text {
         display: block;
       }
+
+      .feature p {
+        font: normal 16px/26px Roboto;
+      }
     }
 
     .product__reviews {
 
       .reviews__btn-adds {
         margin-bottom: 40px;
+
+        @include screen(l) {
+          max-width: 295px;
+        }
       }
 
       .title {
