--- a/src/sass/layout/_refferal.scss
+++ b/src/sass/layout/_refferal.scss
@@ -49,6 +49,14 @@
           }
         }
       }
+
+      p {
+        &:first-of-type {
+          font: 600 18px/24px FuturaPT;
+          color: rgba(48, 55, 61, .9);
+        }
+      }
+
     }
   }
 
@@ -65,7 +73,7 @@
     }
 
     p {
-      font: normal 18px/26px Roboto;
+      font: normal 16px/26px Roboto;
 
       @include screen(xl) {
         margin-bottom: 20px;
@@ -184,7 +192,7 @@
     .btn {
       padding: 18px 15px;
       margin: 0 auto;
-      font: 600 18px/21px FuturaPT;
+      font: 500 18px/21px FuturaPT;
       text-transform: uppercase;
 
       @include screen(xl) {
@@ -193,6 +201,16 @@
 
       @include screen(l) {
         max-width: 280px;
+      }
+
+      &:last-of-type {
+        background: #6344B6;
+        box-shadow: 0px 4px 12px rgba(107, 72, 169, 0.4);
+
+        &:hover {
+          background: rgb(103, 60, 221);
+          box-shadow: 0px 4px 15px rgba(107, 72, 169, 0.7);
+        }
       }
     }
   }
