--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -37,12 +37,17 @@
         margin-bottom: 85px;
         margin-top: 30px;
         max-width: 270px;
-        background: transparent;
-        color: rgba(48, 55, 61, 0.8);
-        box-shadow: 0px 2px 15px rgba(0, 0, 0, .1);
+        color: #FF548C;
+        background-color: #ffffff;
+        border: 1px solid rgba(236, 236, 236, .7);
+        transition: border .3s, background-color .3s, box-shadow .3s, color .15s;
+        overflow: hidden;
 
         &:hover {
-          box-shadow: 0px 2px 15px rgba(0, 0, 0, .3)
+          background-color: #FF548C;
+          color: #ffffff;
+          border-color: #FF548C;
+          box-shadow: 0px 6px 30px rgba(248, 53, 94, 0.4);
         }
       }
     }
@@ -58,8 +63,13 @@
       }
 
       div:first-of-type {
-        width: 80px;
-        height: 80px;
+        width: 40px;
+        height: 40px;
+
+        svg {
+          width: 25px;
+          height: 25px;
+        }
       }
 
       li {
@@ -196,16 +206,6 @@
         }
       }
 
-      &-title {
-        display: inline-block;
-        text-transform: uppercase;
-        font: 600 16px/19px FuturaPT;
-
-        span {
-          color: #FF548C;
-        }
-      }
-
       &-input {
         width: 100%;
         padding: 15px;
@@ -245,10 +245,12 @@
         }
       }
 
-      &-btn--pink {
+      &-btn--green {
         padding: 19px 15px;
         font: 500 18px/21px FuturaPT;
         text-transform: uppercase;
+        background: #27CC00;
+        box-shadow: 0px 3px 10px rgba(39, 204, 0, 0.35);
 
         span {
           position: relative;
@@ -258,22 +260,10 @@
           position: absolute;
           left: -35px;
         }
-      }
 
-      &-btn--blue {
-        padding: 19px 15px;
-        font: 600 18px/21px FuturaPT;
-        text-transform: uppercase;
-        background: #0095FF;
-        box-shadow: 0px 3px 10px rgba(0, 149, 255, 0.4);
-
-        span {
-          position: relative;
-        }
-
-        svg {
-          position: absolute;
-          left: -35px;
+        &:hover {
+          background: #5EF13B;
+          box-shadow: 0px 3px 20px rgba(67, 254, 22, 0.701841);
         }
       }
     }
@@ -377,103 +367,42 @@
 
     li {
       position: relative;
-      min-width: 110px;
-      min-height: 110px;
-      width: 110px;
-      height: 110px;
-      border-radius: 50%;
+      min-width: 116px;
+      min-height: 65px;
 
-      div {
-        text-align: center;
-      }
-
-      &::after {
-        content: "";
-        position: absolute;
-        top: 10px;
-        left: 0;
-        right: 0;
-        margin: auto;
-        width: 18px;
-        height: 14px;
-        background: url("../img/pic/ico/product-check.svg") no-repeat;
-        opacity: 0;
-        z-index: 2;
-        transition: opacity .2s;
-      }
-
-      &::before {
-        content: "";
-        position: absolute;
-        top: 5px;
-        left: 0;
-        right: 0;
-        margin: auto;
-        width: 26px;
-        height: 26px;
-        background: url("../img/pic/ico/product-plus.svg") no-repeat;
-        z-index: 2;
-        opacity: 0;
-        transition: opacity .2s;
-      }
-
-      &:hover {
-        border-color: rgba(255, 84, 140, 0.2);
-        box-shadow: 0px 5px 15px rgba(255, 84, 140, 0.3);
-
-        div {
-          border-color: rgba(255, 84, 140, 0.2);
-        }
-
-        &:before {
-          opacity: 1;
-        }
+      &:not(:last-of-type) {
+        margin-right: 10px;
       }
 
       &.checked {
-        border-color: #FF548C;
-
-        div {
-          border-color: #FF548C;
-        }
-
-        &::after {
-          opacity: 1;
-        }
-
-        &::before {
-          display: none;
-        }
-
+        border: 1px solid #FF548C;
+        box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
       }
     }
 
     div {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: left;
       position: relative;
-      border: 1px solid #EAEAEA;
-      border-radius: 50%;
-      background: #FFFFFF;
       overflow: hidden;
       cursor: pointer;
       width: 100%;
       height: 100%;
+      background: #FFFFFF;
+      border-radius: 10px;
 
       span {
         position: relative;
         z-index: 1;
-        display: inline-block;
-        font: 600 14px/16px FuturaPT;
-        text-transform: uppercase;
+        font: 500 14px/16px FuturaPT;
+        width: min-content;
       }
 
       img {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-        height: auto;
-        mix-blend-mode: darken;
+        margin-right: 10px;
       }
     }
   }
@@ -599,13 +528,13 @@
     padding: 8px 15px 10px;
     width: 100%;
     text-align: center;
-    border: 1px solid rgba(43, 45, 48, 0.4);
+    border: 1px solid #FF548C;
     border-radius: 8px;
     font: 600 16px/22px FuturaPT;
     background: #FFFFFF;
-    color: rgba(43, 45, 48, 0.8);
+    color: #FF548C;
     cursor: pointer;
-    white-space: no-wrap;
+    white-space: nowrap;
 
     @include screen(l) {
       align-self: flex-start;
