feature: adds new elements

--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -172,7 +172,7 @@
 
     &--gray {
       background: #F8F8F8;
-      color: #FF548C;
+      color: rgb(145, 141, 141);
 
       &:hover {
         background: #ffffff;
