--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -262,8 +262,8 @@
         }
 
         &:hover {
-          background: #5EF13B;
-          box-shadow: 0px 3px 20px rgba(67, 254, 22, 0.701841);
+          background: #6344B6;
+          box-shadow: 0px 4px 12px rgba(107, 72, 169, 0.4);
         }
       }
     }
