--- a/src/components/header.html
+++ b/src/components/header.html
@@ -29,9 +29,7 @@
     <div class="uk-flex uk-flex-middle uk-padding-small-top@l uk-padding-small-bottom@l">
       <div class="header__menu uk-hidden@l">
         <button class="header__menu-button" data-uk-toggle="target: #menuMobile">
-          <svg width="26" height="20" fill="#F9F9F9">
-            <use xlink:href="img/symbol/sprite.svg#hamburger" />
-          </svg>
+          <span></span>
         </button>
 
         <!-- Menu Mobile -->
@@ -946,7 +944,7 @@
           <span>2 шт</span>
         </div>
 
-        <button class="cart__mobile uk-hidden@l">
+        <button class="cart__mobile uk-hidden@l" data-uk-toggle="target: #popupOneClick">
           <svg width="24" height="24" fill="#6344B6">
             <use xlink:href="img/symbol/sprite.svg#cart-icon" />
           </svg>
