--- a/src/sass/components/_field.scss
+++ b/src/sass/components/_field.scss
@@ -33,6 +33,7 @@
       background: #FFFFFF;
       border: 1px solid #E9E9E9;
       box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
+      -webkit-box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
       border-radius: 8px;
     }
 
@@ -45,6 +46,7 @@
       color: #30373D;
       border: 1px solid #E9E9E9;
       box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
+      -webkit-box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
       border-radius: 8px;
       resize: none;
     }
@@ -59,6 +61,7 @@
     @include screen(l) {
       border: 1px solid #E9E9E9;
       box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
+      -webkit-box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
       border-radius: 6px;
       overflow: hidden;
     }
@@ -73,6 +76,7 @@
         background: #FFFFFF;
         border: 1px solid #E9E9E9;
         box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
+        -webkit-box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
         border-radius: 6px;
       }
     }
