--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -124,12 +124,21 @@
   &__logo {
     display: flex;
 
+    @media (max-width: 374px) {
+      margin-right: 15px !important;
+      padding-top: 0px !important;
+    }
+
     @include screen(xl) {
       padding-top: 5px;
       margin-right: 30px;
     }
 
     img {
+      @media (max-width: 374px) {
+        width: 80px !important;
+      }
+
       @include screen(xl) {
         width: 111px;
       }
@@ -454,6 +463,7 @@
         @include screen(xl) {
           display: flex;
           width: auto;
+          min-width: 80px;
           min-height: 100px;
           max-height: 100px;
           margin-right: 10px;
@@ -688,6 +698,7 @@
 
   &__menu {
     &-button {
+      position: relative;
       margin-right: 20px;
       display: flex;
       justify-content: center;
@@ -697,6 +708,62 @@
       border-radius: 8px;
       box-shadow: 0px 2px 8px rgba(255, 84, 140, 0.4);
       background: #FF548C;
+
+      span {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        height: 4px;
+        width: 60%;
+        background: white;
+        border-radius: 10px;
+        transition: transform .5s, opacity .05s;
+
+        &::before {
+          content: "";
+          position: absolute;
+          top: -10px;
+          left: 0;
+          right: 0;
+          margin: auto;
+          height: 4px;
+          width: 100%;
+          background: white;
+          border-radius: 10px;
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -10px;
+          left: 0;
+          right: 0;
+          margin: auto;
+          height: 4px;
+          width: 100%;
+          background: white;
+          border-radius: 10px;
+        }
+      }
+
+      &.open {
+        span {
+          transform: rotate(45deg);
+
+          &::before {
+            opacity: 0;
+
+          }
+
+          &::after {
+            transform: rotate(90deg) translateX(-9px);
+          }
+        }
+      }
     }
 
     /*  .uk-offcanvas {
