--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -3,8 +3,9 @@
     padding: 0;
     border-radius: 20px;
     overflow: hidden;
-    box-shadow: 0px 10px 28px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 10px 28px #00000033;
     border-radius: 24px;
+    background: transparent;
 
     &--small {
       width: 500px;
@@ -23,14 +24,27 @@
     padding: 35px;
     background: #2C0952;
     color: #ffffff;
+    overflow: hidden;
+    border-radius: 24px 24px 0 0;
 
     p {
-      margin-top: 15px;
-      font: 300 18px/28px Roboto;
+      @include screen(xl) {
+        margin-top: 13px;
+        font: 300 15px/22px Roboto;
+      }
+
+      @include screen(l) {
+        margin-top: 15px;
+        font: 300 18px/28px Roboto;
+      }
     }
   }
 
   &__content {
+    background: #ffffff;
+    overflow: hidden;
+    border-radius: 0 0 24px 24px;
+
     @include screen(xl) {
       padding: 20px;
     }
@@ -45,15 +59,11 @@
 
     @include screen(xl) {
       margin-top: 20px;
-      margin-left: 20px;
-      margin-right: 20px;
       padding: 20px;
     }
 
     @include screen(l) {
       margin-top: 30px;
-      margin-left: 30px;
-      margin-right: 30px;
       padding: 20px 30px 30px 30px;
     }
 
@@ -67,39 +77,50 @@
     input+label::after {
       content: "";
       position: absolute;
-      left: -25px;
-      top: 0;
-      bottom: 0;
-      margin: auto;
       width: 20px;
       height: 20px;
       border-radius: 4px;
       background-color: #ffffff;
       border: 2px solid #E3E3E3;
+
+      @include screen(xl) {
+        top: -3px;
+        left: -22px;
+      }
+
+      @include screen(l) {
+        top: 0;
+        bottom: 0;
+        left: -25px;
+        margin: auto;
+      }
     }
 
     input:checked+label::before {
       content: "";
       position: absolute;
-      left: -21px;
-      top: 0;
-      bottom: 0;
-      margin: auto;
       width: 12px;
       height: 10px;
       background: url("../img/pic/ico/check-ico.svg") no-repeat;
       background-size: cover;
       z-index: 1;
+
+      @include screen(xl) {
+        top: 2px;
+        left: -18px;
+      }
+
+      @include screen(l) {
+        top: 0;
+        bottom: 0;
+        left: -21px;
+        margin: auto;
+      }
     }
 
     a {
       color: #FF548C;
       border-bottom: 1px solid #FF548C;
-
-      @include screen(x) {
-        display: block;
-        width: max-content;
-      }
     }
   }
 
@@ -157,6 +178,10 @@
     display: block;
     margin-bottom: 5px;
     color: #ffffff;
+
+    @include screen(xl) {
+      font-size: 24px;
+    }
   }
 
   &__subtitle {
@@ -228,6 +253,10 @@
     margin-bottom: 30px;
     border-top: 1px solid rgba(216, 216, 216, .5);
     border-bottom: 1px solid rgba(216, 216, 216, .5);
+
+    &--checkout .product-card__image {
+      width: 75px;
+    }
   }
 
   &__price {
@@ -283,8 +312,15 @@
 
     a {
       span {
-        margin-bottom: 12px;
-        font: 500 32px/37px Roboto;
+        @include screen(xl) {
+          margin-bottom: 10px;
+          font: 500 25px/28px Roboto;
+        }
+
+        @include screen(l) {
+          margin-bottom: 12px;
+          font: 500 32px/37px Roboto;
+        }
       }
     }
 
@@ -297,6 +333,12 @@
   &--question {
     .popup__header {
       padding-bottom: 25px;
+
+      p {
+        @media (max-width: 374px) {
+          display: none;
+        }
+      }
     }
 
     .popup__content {
@@ -898,6 +940,16 @@
   &--cart-add {
     .popup__content {
       padding-top: 15px;
+    }
+  }
+
+  &--thanks {
+    .popup__header {
+      p {
+        span {
+          color: #ffffff !important;
+        }
+      }
     }
   }
 }
